name:                ballast
version:             0.1.0.0
synopsis:            Shipwire API client
description:         Please see README.md
homepage:            https://github.com/bitemyapp/ballast#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Zabelin, Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2016 Chris Allen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ballast
                       Ballast.Client
                       Ballast.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , text
                     , utf8-string
                     , time
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitemyapp/ballast
